--- a/package.json
+++ b/package.json
@@ -9,34 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@candypay/checkout-sdk": "0.1.47",
+    "@candypay/checkout-sdk": "0.1.49-alpha.1",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@metaplex-foundation/js": "^0.18.0",
     "@next/font": "13.1.6",
-    "@project-serum/anchor": "^0.26.0",
-    "@rainbow-me/rainbowkit": "^0.8.1",
-    "@thirdweb-dev/sdk": "^3.8.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
-    "alchemy-sdk": "^2.4.3",
     "axios": "^1.3.2",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "ethers": "5.7.2",
     "express": "^4.18.2",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
-    "typescript": "4.9.5",
-    "wagmi": "^0.11.5"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
