--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@candypay/checkout-sdk": "0.1.49-alpha.3",
-    "@candypay/elements": "^0.0.13",
+    "@candypay/checkout-sdk": "0.1.51",
+    "@candypay/elements": "0.0.14",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
