--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@candypay/checkout-sdk": "0.1.55",
-    "@candypay/elements": "0.0.17-alpha.0",
+    "@candypay/elements": "0.0.18",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
